--- a/addon/templates/components/modal.hbs
+++ b/addon/templates/components/modal.hbs
@@ -1,3 +1,5 @@
 <div id={{this.modalElementId}} class="epm-modal {{this.optionsClassName}} {{this.animatingOutClass}}">
-  {{component @modal._name data=@modal._data close=(action "close")}}
+  {{#let (component (ensure-safe-component @modal._name) data=@modal._data close=(action "close")) as |ModalComponent|}}
+    <ModalComponent />
+  {{/let}}
 </div>
